# psforge-grid/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psforge-grid"
version = "0.1.0"
description = "Core data models and I/O for the psforge project."
readme = "README.md"
license = { text = "MIT" } # or Apache-2.0
requires-python = ">=3.9"

# Dependencies
# Hub design: psforge-grid has minimal dependencies (standard library only)
dependencies = []

# Development dependencies (tests, etc.)
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",        # Linter/Formatter
    "mypy",        # Type checker
    "pre-commit",  # Git hooks for automatic checks
]

[tool.setuptools.packages.find]
where = ["src"] # Source code is in the 'src' directory

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["psforge_grid"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["site-packages"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false