# psforge-grid/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psforge-grid"
version = "0.2.1"
description = "Core data models and I/O for the psforge power system analysis ecosystem. LLM-friendly design for AI-assisted analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Manabe Lab LLC", email = "manabe@manabelab.com" }
]
maintainers = [
    { name = "Manabe Lab LLC", email = "manabe@manabelab.com" }
]
keywords = [
    "power-systems",
    "electrical-engineering",
    "psse",
    "power-flow",
    "grid",
    "llm-friendly",
    "education",
    "energy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
# Dependencies - CLI tools (typer/rich) are included by default for immediate usability
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/manabelab/psforge-grid"
Documentation = "https://github.com/manabelab/psforge-grid#readme"
Repository = "https://github.com/manabelab/psforge-grid.git"
Changelog = "https://github.com/manabelab/psforge-grid/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/manabelab/psforge-grid/issues"

[project.optional-dependencies]
# Slim install without CLI dependencies (for embedding in other packages)
slim = []
# Backward compatibility: cli extra is now empty since CLI is included by default
cli = []
dev = [
    "pytest",
    "ruff>=0.8.0", # Linter/Formatter (pinned to avoid rule differences)
    "mypy",        # Type checker
    "pre-commit",  # Git hooks for automatic checks
]

[project.scripts]
psforge-grid = "psforge_grid.cli:main"

[tool.setuptools.packages.find]
where = ["src"] # Source code is in the 'src' directory

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["psforge_grid"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["site-packages"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
